# CPU_Raytrace

./: 3Spheres_Tetra_Fast.avi  CMakeLists.txt  Figures.cpp  Figures.h  auxiliary_funcs.cpp  auxiliary_funcs.h  canvas.h  exceptions.h  instructions.txt  main.cpp  objects.txt  raytrace.cpp  raytrace.h  reader.cpp  reader.h
